--- a/vignettes/Example_scTypeGSEA.Rmd
+++ b/vignettes/Example_scTypeGSEA.Rmd
@@ -14,7 +14,7 @@ This package is designed to assign cell type labels for each identified cluster 
 
 ## Installation
 
-You can use following codes to install the package.
+You can use following codes to install the package. To use some functions in "fgsea", your R version must be >= 3.6.0.
 
 ```{r, eval=FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE))
@@ -33,24 +33,24 @@ install_github("cailab-tamu/scTypeGSEA")
 library(scTypeGSEA)
 ```
 
-One can do quality control, data pre-process, cluster, get full changes, do GSEA and label the cell in one step. Following code is for toy data set "pbmc_small".
+Here we use a small data set "pbmc_small" to show our main function "assignCellType". One can do quality control, data pre-process, cluster, get full changes, do GSEA and label the cell in one step. Following code is for toy data set "pbmc_small".
 ```{r, warning=FALSE}
 pbmc_res <- assignCellType(obj = pbmc_small, min.cells = 1, min.features = 10, nfeatures = 100, 
                            npcs = 10, dims = 1:10, k.param = 5, resolution = 0.75, min.pct = 0.25, 
                            test.use = "MAST", minSize = 5)
 ```
 
-It will return a list. The first entry is a Seurat object.
+It will return a list with 2 slots. The first slot is a Seurat object.
 ```{r}
 pbmc_res$obj
 ```
 
-The second entry is a matrix contains cluster-ID, cell type and p-value for each cell.
+The second slot is a matrix contains cluster-ID, cell type and p-value for each cell.
 ```{r}
 head(pbmc_res$cell_mat)
 ```
 
-Next is to illustrate step by step.
+Next is to illustrate this pipeline step by step.
 
 ### Load data and quality control
 Here we will use data set "pbmc" go through this pipline. First is to load data set and do quality control. The input can be a Seurat object or count gene expression matrix.
