--- a/vignettes/Example_scTypeGSEA.Rmd
+++ b/vignettes/Example_scTypeGSEA.Rmd
@@ -37,7 +37,7 @@ library(scTypeGSEA)
 ## Quick example
 
 Here we use a toy data set "small_RNA" to show our main function "assignCellType" for single cell RNA sequence data. This function can achieve quality control, data pre-process, cluster, get fold changes, do GSEA and label the cell in one step.
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 pbmc_example_res <- assignCellType(small_RNA, min.cells = 1, min.features = 10, 
                                    nfeatures = 100, npcs = 10,
                                    dims = 1:10, k.param = 5, resolution = 0.75,
@@ -65,7 +65,7 @@ Next is to illustrate this pipeline step by step.
 ### Load data and quality control
 Here we will use the data set “pbmc_raw”, which has 32738 genes and 2700 cells, to go through this pipeline. The first step is to create Seurat Object, do quality control and then do basic data pre-process, which includes “Normalization”, “Scale data”, “Find HVG” and “PCA”. Here we do “LogNormalize” normalization, “vst” feature selections to select 2000 features and do PCA to get the first 50 PCs. The input can be a Seurat object or a count gene expression matrix.
 
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval=FALSE}
 library(scTypeGSEA)
 pbmc <- scqc(pbmc_raw, min.cells = 3, min.features = 200, percent.mt = 5, 
              normalization.method = "LogNormalize", scale.factor = 10000, 
@@ -75,7 +75,7 @@ pbmc
 
 ### Data pre-process and do cluster
 The second step is to cluster data. For single cell RNA sequence data, we will base on “FindClusters” function in the Seurat package. 
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval=FALSE}
 set.seed(47)
 pbmc <- doClustering(pbmc, dims = 1:50, k.param = 20, resolution = 0.5)
 head(pbmc@meta.data$seurat_clusters)
@@ -89,14 +89,14 @@ pbmc <- doClustering(pbmc, cluster_cell = Your_cluster_list_for_cell)
 
 ### Get fold changes
 Before Gene set enrichment analysis (GSEA), for each cluster, we need a gene rank list. Here we do gene differential expression analysis for each cluster regarding all others to achieve this. The default is “MAST” method. For each cluster, it will return a ranked gene list.
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval=FALSE}
 cluster_list <- getFC(pbmc, min.pct = 0.25, test.use = "MAST")
 head(cluster_list[[1]])
 ```
 
 ### Gene set enrichment analysis (GSEA)
 After getting rank of gene list for each cluster, compared it with cell type markers database, GSEA method will give us NSF and p-value. By NSF, we can decide the cell type for each cluster. The default database is "PanglaoDB" database. This function will give us cell type for each cluster, with its NSF and padj.
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval=FALSE}
 cluster_celltype <- doGSEA(cluster_list = cluster_list, db = "PanglaoDB_list",
                             minSize = 15, maxSize = 500)
 head(cluster_celltype)
@@ -110,7 +110,7 @@ cluster_celltype <- GSEA_analysis(cluster_list = cluster_list, db = "path/to/you
 
 ### Label the cell type
 The last step is to add label cell type to our Seurat object.
-```{r, warning=FALSE, cache = T, eval=FALSE}
+```{r, warning=FALSE, eval=FALSE}
 pbmc_res <- labelCelltype(pbmc, cluster_celltype)
 ```
 
@@ -126,7 +126,7 @@ head(pbmc_res$cell_mat)
 
 ### Plot the data with cell type
 
-```{r, warning=FALSE, message=FALSE, fig.height=5, chache = T, eval=FALSE}
+```{r, warning=FALSE, message=FALSE, fig.height=5, eval=FALSE}
 library(Seurat)
 pbmc <- pbmc_res$obj
 pbmc <- Seurat::RunTSNE(pbmc, dims = 1:30)
@@ -154,7 +154,7 @@ install_github("timoast/signac")
 
 One can also use our main function "assignCellType" to do analysis in one step. Here we use a toy data set "small_ATAC", which contains 685 peaks and 80 cells. Note that here we set datatype = "ATAC" and "annotation.file" is the path to GTF annotation file.
 
-```{r, chache = T, message = FALSE, warning = FALSE, eval=FALSE}
+```{r, message = FALSE, warning = FALSE, eval=FALSE}
 annotation.file <- "~/Documents/Single cell/package example/R package/atac2rna/dataset/Homo_sapiens.GRCh37.82.gtf"
 ATAC_example_res <- assignCellType(small_ATAC, datatype = "ATAC", annotation.file = annotation.file,
                                     min.cells = 1, min.features = 10, nfeatures = 100, npcs = 10,
@@ -163,7 +163,7 @@ ATAC_example_res <- assignCellType(small_ATAC, datatype = "ATAC", annotation.fil
 ```
 
 Same as before, it will return a list with 4 slots. 
-```{r}
+```{r, eval=FALSE}
 ATAC_example_res$Seurat_obj
 head(ATAC_example_res$cell_mat)
 head(ATAC_example_res$cluster_celltype)
