--- a/vignettes/Example_scTypeGSEA.Rmd
+++ b/vignettes/Example_scTypeGSEA.Rmd
@@ -65,7 +65,7 @@ Next is to illustrate this pipeline step by step.
 ### Load data and quality control
 Here we will use the data set “pbmc_raw”, which has 32738 genes and 2700 cells, to go through this pipeline. The first step is to create Seurat Object, do quality control and then do basic data pre-process, which includes “Normalization”, “Scale data”, “Find HVG” and “PCA”. Here we do “LogNormalize” normalization, “vst” feature selections to select 2000 features and do PCA to get the first 50 PCs. The input can be a Seurat object or a count gene expression matrix.
 
-```{r, warning=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 library(scTypeGSEA)
 pbmc <- scqc(pbmc_raw, min.cells = 3, min.features = 200, percent.mt = 5, 
              normalization.method = "LogNormalize", scale.factor = 10000, 
@@ -75,58 +75,58 @@ pbmc
 
 ### Data pre-process and do cluster
 The second step is to cluster data. For single cell RNA sequence data, we will base on “FindClusters” function in the Seurat package. 
-```{r, warning=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 set.seed(47)
 pbmc <- doClustering(pbmc, dims = 1:50, k.param = 20, resolution = 0.5)
 head(pbmc@meta.data$seurat_clusters)
 ```
 
 If there are clusters for the cells, you can set “cluster_cell” to add cluster to cells.
-```{r, eval=FALSE}
+```{r, eval=FALSE, eval = FALSE}
 ## don't run
 pbmc <- doClustering(pbmc, cluster_cell = Your_cluster_list_for_cell)
 ```
 
 ### Get fold changes
 Before Gene set enrichment analysis (GSEA), for each cluster, we need a gene rank list. Here we do gene differential expression analysis for each cluster regarding all others to achieve this. The default is “MAST” method. For each cluster, it will return a ranked gene list.
-```{r, warning=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 cluster_list <- getFC(pbmc, min.pct = 0.25, test.use = "MAST")
 head(cluster_list[[1]])
 ```
 
 ### Gene set enrichment analysis (GSEA)
 After getting rank of gene list for each cluster, compared it with cell type markers database, GSEA method will give us NSF and p-value. By NSF, we can decide the cell type for each cluster. The default database is "PanglaoDB" database. This function will give us cell type for each cluster, with its NSF and padj.
-```{r, warning=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 cluster_celltype <- doGSEA(cluster_list = cluster_list, db = "PanglaoDB_list",
                             minSize = 15, maxSize = 500)
 head(cluster_celltype)
 ```
 
 You can also use your own cell type markers database. Setting “db” to be a path to the new database that to be used, which is a list of cell types with their marker genes. The file must be in ‘rds’ format.
-```{r, eval=FALSE}
+```{r, eval=FALSE, eval = FALSE}
 ## Don't run
 cluster_celltype <- doGSEA(cluster_list = cluster_list, db = "path/to/your/rdsfile")
 ```
 
 ### Label the cell type
 The last step is to add label cell type to our Seurat object.
-```{r, warning=FALSE}
+```{r, warning=FALSE, eval = FALSE}
 pbmc_res <- labelCelltype(pbmc, cluster_celltype)
 ```
 
 It will return a list with 2 slots. The first slot is a Seurat object.
-```{r}
+```{r, eval = FALSE}
 pbmc_res$obj
 ```
 
 The second slot is a data frame including "cluster-ID", "cell type" and "p-value" for each cell.
-```{r}
+```{r, eval = FALSE}
 head(pbmc_res$cell_mat)
 ```
 
 ### Plot the data with cell type
 
-```{r, warning=FALSE, message=FALSE, fig.height=5}
+```{r, warning=FALSE, message=FALSE, fig.height=5, eval = FALSE}
 library(Seurat)
 pbmc <- pbmc_res$obj
 pbmc <- Seurat::RunTSNE(pbmc, dims = 1:30)
